# php-zvec

./: .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION.md  README.md  SECURITY.md  build_ffi.sh  build_zvec.sh  build_zvec_lib.sh  composer.json  repomix-output.xml
.github/workflows/: build.yml  release.yml
docker/: Dockerfile.zvec-ubuntu24  Makefile  build-zvec.sh
docs/: workflow.md
examples/: 01_basics.php  02_search.php  03_documents.php  04_schema.php  05_persistence.php  07_memory_management.php  08_error_handling.php  README.md  batch_operations.php  embeddings_basic.php  embeddings_with_zvec.php  multivector_query.php  query_by_id.php  query_with_reranker.php  rerankers.php  sparse_vectors.php  vector_query.php
ffi/: CMakeLists.txt  zvec_ffi.cc  zvec_ffi.h  zvec_ffi_php.h
php/: ZVec.php  ZVecReRanker.php  ZVecRerankedDoc.php  ZVecRrfReRanker.php  ZVecWeightedReRanker.php  embeddings.php  example.php  example_batch_operations.php  example_multivector_query.php  example_query_by_id.php  example_query_with_reranker.php  example_rerankers.php  example_sparse_vectors.php  example_vector_query.php
php-ext/: build_ext.sh  config.h.in~  config.m4  configure~  php_zvec.h  zvec.cc  zvec.exported_symbols  zvec.version-script  zvec_collection.cc  zvec_collection.h  zvec_collection_options.cc  zvec_collection_options.h  zvec_doc.cc  zvec_doc.h  zvec_embedding_interfaces.cc  zvec_embedding_interfaces.h  zvec_exception.cc  zvec_exception.h  zvec_openai_embedding.cc  zvec_openai_embedding.h  zvec_qwen_embedding.cc  zvec_qwen_embedding.h  zvec_reranked_doc.cc  zvec_reranked_doc.h  zvec_reranker.cc  zvec_reranker.h  zvec_rrf_reranker.cc  zvec_rrf_reranker.h  zvec_schema.cc  zvec_schema.h  zvec_vector_query.cc  zvec_vector_query.h  zvec_weighted_reranker.cc  zvec_weighted_reranker.h
php/embeddings/: EmbeddingInterfaces.php  OpenAIDenseEmbedding.php  QwenDenseEmbedding.php
src/: Installer.php  ZVec.php  ZVecCollectionOptions.php  ZVecCollectionStats.php  ZVecDoc.php  ZVecException.php  ZVecFieldSchema.php  ZVecGroupByVectorQuery.php  ZVecIndexParams.php  ZVecQueryInterface.php  ZVecReRanker.php  ZVecRerankedDoc.php  ZVecRrfReRanker.php  ZVecSchema.php  ZVecVectorQuery.php  ZVecWeightedReRanker.php
src/embeddings/: EmbeddingInterfaces.php  OpenAIDenseEmbedding.php  QwenDenseEmbedding.php
tasks/done/: 01_ivf_index_creation.md  03_concurrency_options.md  04_extra_data_types.md  05_multi_vector_query.md  06_hnsw_query_params_extended.md  09_extensions_rerankers.md  10_extensions_embeddings.md  11_vector_query_by_id.md  12_vector_query_object.md  13_add_column_string_bool.md  14_sparse_vector_data_ops.md  15_max_doc_count_per_segment.md  16_per_doc_status_on_batch_ops.md  17_reranker_in_query.md  18_collections_tests.md  19_schema_evolution_tests.md  21_query_operations_tests.md  22_document_operations_tests.md  23_utility_tests.md  25_closed_flag_protection.md  26_improve_cleanup_safety.md  27_migrate_php_tests_to_phpt.md  27_test_db_directory.md  28_fp16_fp64_vectors.md  29_fix_query_flat_segfault.md
tasks/todo/: 01_ivf_index_creation.md  05_multi_vector_query.md  06_hnsw_query_params_extended.md  10_extensions_embeddings.md  12_vector_query_object.md  29_fp64_vectors.md  (+9 more)
tests/: bug_0001.php  bug_0001.phpt  bug_0002.php  bug_0002.phpt  bug_0003.php  bug_0003.phpt  bug_0004.php  bug_0004.phpt  bug_0005.phpt  bug_0005_cleanup_after_failed_ops.php  bug_0006.php  bug_0006.phpt  bug_0006_rocksdb_lock.php  bug_0007.phpt  bug_0008.php  bug_0008.phpt  bug_0009.php  bug_0009.phpt  bug_0010.php  bug_0010.phpt  bug_0011.php  bug_0011.phpt  bug_0012.php  bug_0012.phpt  bug_0029_query_param_validation.phpt  bug_0049.php  bug_0049.phpt  bug_0050.phpt  bug_0051_init_memory_leak.php  bug_0051_init_memory_leak.phpt  bug_0052.phpt  bug_0054.php  bug_0054.phpt  test_add_column_bool.phpt  test_alter_column.php  test_alter_column.phpt  test_alter_column_nullable.phpt  test_alter_column_rename_type_limitation.phpt  test_batch_operations.phpt  test_buffer_retry.phpt  (+204 more)
todo/: 02_quantize_type.md  03_concurrency_options.md  04_extra_data_types.md  07_alter_column_field_schema.md  08_doc_introspection.md  09_extensions_rerankers.md  11_vector_query_by_id.md  14_sparse_vector_data_ops.md  16_per_doc_status_on_batch_ops.md  17_reranker_in_query.md  18_collections_tests.md  20_data_operations_tests.md  22_document_operations_tests.md  23_utility_tests.md  25_closed_flag_protection.md  26_improve_cleanup_safety.md  27_migrate_php_tests_to_phpt.md
